fix: figcaption align

--- a/themes/spichka/resources/styles/single-post.scss
+++ b/themes/spichka/resources/styles/single-post.scss
@@ -76,7 +76,6 @@ article {
       margin-top: map.get($spacers, 3);
       color: $secondary;
       font-size: 1rem;
-      text-align: center;
     }
   }
 
